force-app/main/default/objects/Project__c/fields/ProjectTerm__c.field-meta.xml
<CustomField>
    <fullName>ProjectTerm__c</fullName>
    <formula>EndDate__c -  StartDate__c +1</formula>
    <label>プロジェクト期間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>