force-app/main/default/objects/Project__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>進行中</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>