force-app/main/default/objects/Project__c/validationRules/EndDate_must_be_before_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_must_be_before_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c &lt;  StartDate__c</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>終了日は開始日より前に設定できません</errorMessage>
</ValidationRule>