force-app/main/default/objects/Project__c/listViews/ProjectKanbanView.listView-meta.xml
<ListView>
    <fullName>ProjectKanbanView</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>プロジェクト</label>
</ListView>